conf/gabrielcampanella-ca/gabrielcampanella-home.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gabrielcampanella
---
apiVersion: v1
kind: Service
metadata:
  namespace: gabrielcampanella
  name: gabrielcampanella-home
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: gabrielcampanella-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gabrielcampanella-home
  name: gabrielcampanella-home
  namespace: gabrielcampanella
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gabrielcampanella-home
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gabrielcampanella-home
    spec:
      containers:
      - image: gabecamp/gatsby-site
        name: gabrielcampanella-home
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
